[gd_scene load_steps=5 format=3 uid="uid://cl06503qlhrk8"]

[ext_resource type="Script" path="res://Scripts/enemy_1.gd" id="1_ipvh7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5m5t"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_3ib73"]
radius = 124.016

[sub_resource type="CircleShape2D" id="CircleShape2D_xjfm8"]
radius = 15.0

[node name="Enemy1" type="CharacterBody2D"]
script = ExtResource("1_ipvh7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 12.0
offset_bottom = 12.0
color = Color(1, 0.207843, 0.211765, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 6)
shape = SubResource("RectangleShape2D_j5m5t")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(6, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_3ib73")

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2(6, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_xjfm8")
debug_color = Color(1, 0, 0.0705882, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
